# totalaud.io

./: .coderabbit.yaml  .cursorrules  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitleaksignore  .gitmessage  .mcp.json  .prettierignore  AGENTS.md  AUDIT_DELIVERABLES_README.md  AUDIT_SUMMARY.md  BROWSER_AUTOMATION_COMPLETE.md  BROWSER_AUTOMATION_GUIDE.md  BROWSER_AUTO_APPROVAL_FIXED.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT_2026.md  COMET_QA_PROMPT.md  CONTRIBUTING.md  DAW_TIMELINE_IMPLEMENTATION.md  ENV_VARIABLES_COMPLETE.md  FEATURES_IMPLEMENTED.md  GITHUB_SETUP_COMPLETE.md  GITHUB_SETUP_PROGRESS.md  HCL_IMPLEMENTATION.md  HCL_PHASE2_FRONTEND_COMPLETE.md  HCL_PHASE2_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LANDING_PAGE_CRITIQUE_AND_IMPROVEMENTS.md  LANDING_PAGE_PHASE_5_PROGRESS.md  LAUNCH_CHECKLIST.md  MCP_AUTO_APPROVAL_SETUP.md  NEXT_STEPS.md  OPTION_B_TESTING_GUIDE.md  OPTION_C_COMPLETE.md  PHASE6_OS_WORKFLOW_SPEC.md  PHASE_10_LAUNCH_READINESS.md  PHASE_10_QA_CHECKLIST.md  (+55 more)
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.vercel/: project.json
agents/: README.md  aestheticCurator.claude  analyticsAnalyst.claude  experienceComposer.claude  flowArchitect.claude  motionChoreographer.claude  orchestrator.claude  realtimeEngineer.claude  signalWriter.claude  soundDirector.claude
apps/loopos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/loopos-desktop/src-tauri/src/: commands.rs  main.rs  menu.rs
changelog/: AI_COMMITS.md
docs/: AGENT_SYSTEM_OVERVIEW.md  ASCII_OS_COMPONENT_TREE.md  INDEX.md  (+42 more)
(+2051 files in other folders)
