[package]
name = "loopos-desktop"
version = "1.0.0"
description = "LoopOS Desktop - Native desktop app for creative campaign management"
authors = ["Total Audio"]
license = ""
repository = ""
default-run = "loopos-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "global-shortcut-all", "dialog-all", "fs-all", "path-all", "shell-open", "system-tray", "window-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
